# particles

./: README.md  pyproject.toml
bouncing_balls/: __main__.py
bouncing_balls/resources/: program_fragment_shader.glsl
particles/: __main__.py  window.py
particles/resources/: program_vertex_shader.glsl  transform_vertex_shader.glsl
